# seekdb-rs

./: .gitignore  Cargo.toml  README.md  README_zh-CN.md
design/: api_design.md  architecture.md
src/: admin.rs  backend.rs  collection.rs  config.rs  embedding.rs  error.rs  filters.rs  lib.rs  meta.rs  server.rs  sync.rs  types.rs
tests/: integration_client.rs  integration_collection_dml.rs  integration_embedding.rs  integration_hybrid.rs  integration_query.rs  integration_sync.rs  readme_test.rs
tests/common/: mod.rs
