[package]
name = "seekdb-rs"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Rust SDK for SeekDB"
publish = false

[features]
default = ["server"]
server = []
embedding = ["reqwest", "tokenizers", "ort"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1"
anyhow = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "mysql"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Optional deps for default embedding implementation
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls", "blocking"], optional = true }
tokenizers = { version = "0.15", optional = true }
ort = { version = "2.0.0-rc.10", optional = true }
